<resources>
    <string name="facebook_app_id">320398858824133</string>
    <string name="default_notification_channel_id">32000</string>
    <string name="default_notification_channel_name">Default Notification Channel</string>
    <string name="default_notification_channel_description">It will deliver all notification above Android Oreo. It
        should be enabled to receive notification.
    </string>
    <string name="login">Login</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="type_comment_here">Type your comment here...</string>
    <string name="enter_code">Sign up</string>
    <string name="have_a_referral_code">Don\'t have an account?</string>
    <string name="already_a_user">Already a user?</string>
    <string name="email_address_or_mobile_number">Email or Mobile Number</string>
    <string name="next">Next</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="otp_has_been_sent_to_your_mobile_number">Your one-time Password (OTP) has been sent. Please check your
        Email and Mobile SMS.
    </string>
    <string name="submit">Submit</string>
    <string name="_100_just_a_step_away">5 just a step away</string>
    <string name="claim_your_bonus_on_registration">Claim your bonus on registration</string>
    <string name="enter_invite_code">Enter Invite Code(optional)</string>
    <string name="user_name">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="by_registering_i_agree_to_playing_11_s_t_amp_cs">
        <![CDATA[By registering, I agree to SFL]]></string>
    <string name="t_amp_cs"><![CDATA[T&Cs and Privacy Policy]]></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="my_contest">My Contests</string>
    <string name="my_contests">My Contests</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="fixtures">Upcomming</string>
    <string name="live">Live</string>
    <string name="results">Results</string>
    <string name="select_a_match">Select a Match</string>
    <string name="enter_contest">Featured Contests</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sign_up">SignUp</string>
    <string name="notification">Notifications</string>
    <string name="filter">Filter</string>
    <string name="wallet">Wallet</string>
    <string name="enter_contest_code">Enter Contest Code</string>
    <string name="create_contest">Create Contest</string>
    <string name="create_team">Create Team</string>
    <string name="join">Join</string>
    <string name="hot_contest">Hot Contest</string>
    <string name="get_ready_for_big_winnings">Get ready for big winnings</string>
    <string name="total_winnings">Total Winnings</string>
    <string name="Rs">\u20B9</string>
    <string name="Rs1000">$ 100000</string>
    <string name="Rs20">$ 20</string>
    <string name="create_team1">Create Team 1</string>
    <string name="contest">Contests</string>
    <string name="winners">Winning Ranks</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="doller_entry_fee">$5 Entry Fee</string>
    <string name="join_the_contest">Join the Contest</string>
    <string name="mega_contest">Mega Contest</string>
    <string name="info">Info</string>
    <string name="player">Player</string>
    <string name="points">Points</string>
    <string name="credits">Credits</string>
    <string name="choose_team">Choose Team</string>
    <string name="pick_1_wicket_keeper">Pick 1 Wicket-Keeper</string>
    <string name="pick_3_5_batsmen">Pick 3–5 Batsmen</string>
    <string name="pick_1_3_allrounder">Pick 1–3 All-Rounders</string>
    <string name="pick_3_5_bowler">Pick 3–5 Bowlers</string>
    <string name="dot">\u2022</string>
    <string name="dot_value">\u2022 7</string>
    <string name="c_will_get_2x_points_amp_vc_will_get_1_5x_points">
        <![CDATA[(C)will get 2x Points & (VC) will get 1.5x Points]]></string>
    <string name="choose_c_vc_title"><![CDATA[Choose C & VC]]></string>
    <string name="save_team">Save Team</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="live_in">Live</string>
    <string name="your_rewards">Your Rewards</string>
    <string name="account">Account</string>
    <string name="add_cash">Add Cash</string>
    <string name="withdraw">Withdraw</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="add_funds">Add Funds</string>
    <string name="transaction_history">Transaction History</string>
    <string name="how_to_play">How to \n Play</string>
    <string name="how_to_play_">How to Play</string>
    <string name="mention">Mention</string>
    <string name="about">About</string>
    <string name="time_left">Time Left</string>
    <string name="rules">Rules</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="playing_history">Playing History</string>
    <string name="batsman">Batsmen</string>
    <string name="totalPoints">Total Points</string>
    <string name="allrounder">All-Rounder</string>
    <string name="bowler">Bowler</string>
    <string name="wicket_keeper">Wicket-Keeper</string>
    <string name="substitute">Substitute</string>
    <string name="contest_invite_code">Contest Invite Code</string>
    <string name="fantasy_point_system">Fantasy Point System</string>
    <string name="helpdesk">Helpdesk</string>
    <string name="about_us">About Us</string>
    <string name="wk">WK</string>
    <string name="bat">BAT</string>
    <string name="all">ALL</string>
    <string name="bowl">BOWL</string>
    <string name="edit">Edit</string>
    <string name="preview">Preview</string>
    <string name="clone">Clone</string>
    <string name="capatain">CAPATAIN</string>
    <string name="vice_caotain">VICE CAOTAIN</string>
    <string name="vice_captain">VICE CAPTAIN</string>
    <string name="my_team">My Team</string>
    <string name="my_teams">My Teams</string>
    <string name="join_this_contest">Join This Contest</string>
    <string name="join_this_contest_rule">By joining this contest you accept contest rules and DFXCHANGE(c) Terms and
        Conditions.
    </string>
    <string name="invite_code">Invite Code</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="enter_contest_name">Enter Contest Name</string>
    <string name="winning_amount">Enter total winning amount (Rs)</string>
    <string name="contest_size">Contest Size</string>
    <string name="allow_friends_to_join_with_multiple_team">Allow friends to join with multiple teams</string>
    <string name="entry_per_team">Entry Per Team:-</string>
    <string name="entry_is_calculated_based_on_total_prize_amount_contest_size">
        <![CDATA[Entry is calculated based on total prize amount & contest size]]></string>
    <string name="prize_pool">Prize Pool</string>
    <string name="sort">Sort</string>
    <string name="winnings">Winnings</string>
    <string name="fees">Fees</string>
    <string name="prizes">Prizes</string>
    <string name="entry">Entry</string>
    <string name="teams">Teams</string>
    <string name="all_contest">All Contest</string>
    <string name="winning_list">Winning List</string>
    <string name="note_the_actual_prize_money_may_be_different_than_the_prize_money_mentioned_above_if_there_is_a_tie_for_any_of_the_winning_positions">
        <b>Note:-</b>
        ACTUAL PRIZE AMOUNT MAY VARY THAN WHAT IS MENTIONED PER RANKING IF THERE WAS A TIE IN SCORES AND RESULTS. REFER
        TO
        <font color="#0190C8">
            <u>RULES AND SCORING</u>
        </font>
        FOR MORE DETAILS.
    </string>
    <string name="view_teams">View Team</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="legality">Legality</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="confirmation">Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="enter_date_of_birth_message">Enter your Date of Birth to confirm your identity.</string>
    <string name="enter_dob">Enter Date of Birth</string>
    <string name="or">Or</string>
    <string name="request_otp">
        <u>Request Otp</u>
    </string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="created">Created</string>
    <string name="invited">Invited</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="add_title">Add Title</string>
    <string name="message_history">Message History</string>
    <string name="enter_message">Enter your message here...</string>
</resources>