<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/bg">
    <include
            android:id="@+id/tool"
            layout="@layout/outside_toolbar"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:padding="@dimen/_16sdp"
                    android:layout_below="@+id/tool"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

        <RelativeLayout
                android:id="@+id/rl_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_txt_confirmation"
                    style="@style/TextStyleSemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/confirmation"
                    android:textColor="@color/textColorOffWhite"
                    android:textSize="@dimen/_22ssp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_txt_confirmation"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/enter_date_of_birth_message"
                    android:textColor="@color/textColorOffWhite"/>

        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/rl_inner_dob"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_below="@+id/rl_conf"
                android:layout_marginTop="@dimen/_25sdp">

            <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:padding="@dimen/_10sdp"
                    app:cardCornerRadius="10dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical"
                        android:padding="@dimen/_5sdp">


                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:layout_marginLeft="@dimen/_3sdp"
                            android:theme="@style/EditTextLabel">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_dob"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_dob"
                                android:imeOptions="actionNext"
                                android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageView
                            android:id="@+id/iv_calendar"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_2sdp"
                            android:src="@mipmap/calculator"/>
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_birthdayCake"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_80sdp"
                android:src="@mipmap/birthday"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_inner_dob"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_cancel"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_fill_button"
                    android:text="@string/cancel"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_next"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/green_fill_button"
                    android:text="@string/next"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_buttons"
                android:textColor="@color/textColorOffWhite"
                style="@style/TextStyleSemiBold"
                android:text="@string/or"
                android:gravity="center"
                android:layout_marginTop="@dimen/_15sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_requestOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtor"
                android:textColor="@color/textColorOffWhite"
                style="@style/TextStyleSemiBold"
                android:text="@string/request_otp"
                android:gravity="center"
                android:paddingBottom="@dimen/_2sdp"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_15sdp"/>


    </RelativeLayout>
</RelativeLayout>