<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingActivity"
        android:background="@mipmap/bg"
        android:orientation="vertical">
    <include
            android:id="@+id/back"
            layout="@layout/include_back"/>
    <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyleSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingRight="@dimen/_12sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorbutton"
            android:alpha="0.2"/>


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    app:srcCompat="@mipmap/referfriend"
                    android:scaleType="fitXY"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">
                <androidx.appcompat.widget.AppCompatEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ll_search"
                        android:hint="@string/add_title"
                        android:textColor="@color/white"
                        android:padding="@dimen/_10sdp"
                        android:textColorHint="@color/white"
                        android:inputType="text"
                        android:singleLine="true"
                        android:imeOptions="actionNext"/>
                <androidx.appcompat.widget.AppCompatEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_bg"
                        android:hint="@string/enter_message"
                        android:gravity="left"
                        android:textColor="@color/white"
                        android:padding="@dimen/_10sdp"
                        android:textColorHint="@color/white"
                        android:inputType="textMultiLine"
                        android:minLines="4"
                        android:imeOptions="actionNext"
                        android:layout_marginTop="@dimen/_5sdp"/>
                <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyleSemiBold"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:text="@string/send"
                        android:background="@drawable/bg_deposit_fund"
                        android:layout_gravity="center"
                        android:textColor="@color/menu_bg"
                        android:gravity="center"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"/>
                <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyleSemiBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message_history"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_gravity="center"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                    android:padding="0.1dp"
                    android:id="@+id/recyclerView_message_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    tools:listitem="@layout/row_view_message_history"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>